Replaced constructor call with valueOf() call to remove static analyzer warning about inefficient use of constructor
Issue-ID: SO-1841
Signed-off-by: Oleksandr Moliavko <o.moliavko@samsung.com>
Change-Id: I5149c8176a5817bd5aa68c039282c570632f4446