@@ -339,7 +339,7 @@ public class MsoVnfPluginAdapterImpl implements MsoVnfAdapter {
                 return null;
             }
         } else if ("boolean".equalsIgnoreCase(type)) {
-            return new Boolean(inputValue.toString());
+            return Boolean.valueOf(inputValue.toString());
         }
 
         // Nothing else matched. Return the original string
